# Esterv.Network.Manager

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: code-format.yml  conf-build-test-install.yml  lint.yml  post-artifact.yml  qml-lint.yml  recreate-develop.yml
examples/: CMakeLists.txt  Wifilist.cpp
examples/qml/: Wifilist.qml
frag/: wifi.frag
include/esterv/utils/: network_manger.hpp
qml/: WifiList.qml  Wifiicon.qml
src/: network_manager.cpp
